--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -88,7 +88,7 @@
         }
 
             .card-header h4 {
-                margin-bottom: 0; /* Başlık ve buton arasındaki boşluğu kaldırmak için */
+                margin-bottom: 0;
             }
 
 
