--- a/IsEmirleri.Web/Views/Project/Index.cshtml
+++ b/IsEmirleri.Web/Views/Project/Index.cshtml
@@ -1,12 +1,17 @@
 ﻿<div class="row">
     <div class="col-12">
         <div class="card">
-            <div class="card-header">
-                <div class="col-11 text-center fs-3 text-dark">Projeler</div>
-                <div class="col-12 fs-3 text-end">
-                    <a href="#" id="btnAdd" class="btn btn-success">Yeni Kayıt</a>
+
+            <div class="card-header bg-soft-success text-dark text-center d-flex">
+               
+                <div class="col-10 text-center fs-3 text-dark"><i class="fas fa-project-diagram"></i>Projeler</div>
+                <div class="col-2 fs-3">
+                    <a href="#" id="btnAdd" class="btn btn-success"><i class="uil uil-plus me-2"></i>Yeni Kayıt</a>
+
                 </div>
             </div>
+
+           
             <div class="card-body">
                 <table id="tblProject" class="table table-bordered table-striped table-hover"></table>
             </div>
