--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -149,23 +149,30 @@
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle"></h5>
+                    <h5 class="modal-title" id="modalTitle">
+                    </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="formMission">
                         <div class="mb-3">
                             <label for="txtTitle" class="form-label">Başlık</label>
-                            <input type="text" class="form-control" id="txtTitle" required>
+                            <input type="text" class="form-control" id="txtTitle" placeholder="Lütfen Görev Başlığı Ekleyiniz">
                         </div>
                         <div class="mb-3">
                             <label for="txtDescription" class="form-label">Açıklama</label>
-                            <textarea class="form-control" id="txtDescription"></textarea>
+                            <textarea class="form-control" id="txtDescription" placeholder="Lütfen Görev Açıklaması Ekleyiniz"></textarea>
                         </div>
+                        @* <div class="mb-3">
+                        <label for="ddlFiles" class="form-label">Files</label>
+                        <select class="form-select" id="ddlFiles" ></select>
+                        </div> *@
+
                         <div class="mb-3">
                             <label for="ddlPriorities" class="form-label">Öncelik</label>
                             <select class="form-select" id="ddlPriorities"></select>
                         </div>
+                     
                         <div class="mb-3">
                             <label for="ddlProjects" class="form-label">Görevin Ait Olduğu Proje</label>
                             <select class="form-select" id="ddlProjects"></select>
@@ -180,16 +187,19 @@
                         </div>
                         <input type="hidden" id="hiddenStatusId" value="">
                     </form>
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Kapat
+                    </button>
                     <button type="button" id="btnSave" class="btn btn-primary">Kaydet</button>
                 </div>
             </div>
         </div>
     </div>
 
-
+  
     @section Scripts {
 
         <script>
@@ -209,7 +219,7 @@
                                                                 ${status.name}
                                                                 <span class="badge bg-secondary ms-2">${status.taskCount}</span>
                                                             </h5>
-                                                            <a href="/Status/Update" class="btn btn-link position-absolute" style="top: 10px; right: 10px; font-size: 1.5rem; color: black; background: none; border: none; padding: 0; text-decoration: none;">
+                                                                       <a onclick="updateStatus(${status.id},this);" class="btn btn-link position-absolute" style="top: 10px; right: 10px; font-size: 1.5rem; color: black; background: none; border: none; padding: 0; text-decoration: none;">
                                                                 ⋮
                                                             </a>
                                                         </div>
@@ -282,6 +292,48 @@
                     });
                 }
             });
+            function updateStatus(statusId, button) {
+
+                $.ajax({
+                    url: '/Status/GetById',
+                    type: 'POST',
+                    data: { id: statusId },
+                    success: function (res) {
+
+                        $("#modalStatus").modal("show");
+                        $("#modalTitle").text("Durum Düzenle");
+                        $("#txtStatusname").val(res.name);
+
+                        $("#btnSavee").text("Düzenle").off().click(function () {
+
+                            res.name = $("#txtStatusname").val();
+
+                            $.ajax({
+                                url: '/Status/Update',
+                                type: 'POST',
+                                data: {
+                                    missionStatus: res
+                                },
+                                success: function (res1) {
+                                    $("#modalStatus").modal("hide");
+
+                               
+                                    $(`#status-card-${statusId} .card-header h5`).text(res1.name);
+                                    $(`#badge-${status.taskCount}`).text(res1.taskCount); //count getirilmeye çalışıldı.
+                                    toastr.success("Durum başarıyla güncellendi!");
+
+                                }
+                            });
+
+
+                        });
+
+                    }
+
+                });
+
+            }
+
 
             $("#btnStatusadd").click(function () {
                 $("#modalStatus").modal("show");
@@ -368,21 +420,24 @@
                     });
                 }
             }
+
             function fillProjects() {
                 $.ajax({
                     url: '/Project/GetAll',
                     type: 'GET',
                     success: (res) => {
                         $("#ddlProjects").empty();
-
+                        $("#ddlProjects").append(new Option("Lütfen Eklenecek Projeyi Seçiniz", "", true, true));
                         for (var item of res.data) {
                             $("#ddlProjects").append(new Option(item.name, item.id));
                         }
                         $("#ddlProjects").select2({
                             dropdownParent: $('#modalAdd'),
+                            placeholder: "Lütfen Eklenecek Projeyi Seçiniz",
+                            allowClear: true,
                             width: "100%"
                         });
-
+                        $("#ddlProjects").val(null).trigger('change');
                     }
                 });
             }
@@ -428,15 +483,17 @@
                     type: 'GET',
                     success: (res) => {
                         $("#ddlPriorities").empty();
-
+                        $("#ddlPriorities").append(new Option("Lütfen Öncelik Seçiniz", "", true, true));
                         for (var item of res.data) {
                             $("#ddlPriorities").append(new Option(item.name, item.id));
                         }
                         $("#ddlPriorities").select2({
                             dropdownParent: $('#modalAdd'),
+                            placeholder: "Lütfen Öncelik Seçiniz",
+                            allowClear: true,
                             width: "100%"
-
                         });
+                        $("#ddlPriorities").val(null).trigger('change');
                     }
                 });
             }
